--- a/cvo.html
+++ b/cvo.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>CV Online</title>
   <!-- Deklarasi cvo-style.css -->
-  <link rel="stylesheet" href="file:///C:/Users/Asus/Documents/webdevelopment/figma/cvo/cvo-style.css">
+  <link rel="stylesheet" href="cvo-style.css">
   <!--Deklarasi font dari google-->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trykker">
