--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
    <div class="box-red-2"></div>
 
    <div class="frame2">
-    <img class="logo" src="https://drive.google.com/file/d/1YxLQB2evsNNv_vJcxjZeeJ_SmbAtZ3A4/view?usp=sharing"/>
+    <img class="logo" src="https://drive.google.com/file/d/1YxLQB2evsNNv_vJcxjZeeJ_SmbAtZ3A4/view"/>
     <a class="nama">Dadi Rahmat</a>
     <div class="line-name-role"></div>
     <a class="role">Software Developer</a>
