--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>CV Online</title>
+  <title>Resume | Dadi Rahmat</title>
   <!-- Deklarasi cvo-style.css -->
   <link rel="stylesheet" href="cvo-style.css">
   <!--Deklarasi font dari google-->
