--- a/arifin-muhammad.html
+++ b/arifin-muhammad.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Resume | Arifin Muhammad</title>
   <!-- Deklarasi cvo-style.css -->
-  <link rel="stylesheet" href="file:///C:/Users/Asus/Documents/webdevelopment/figma/cvo/cvo-style.css">
+  <link rel="stylesheet" href="style-arifin.css">
   <!--Deklarasi font dari google-->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trykker">
@@ -21,7 +21,7 @@
    <div class="box-red-2"></div>
 
    <div class="frame2">
-    <img class="logo" src="C:/Users/Asus/Documents/webdevelopment/figma/cvo/logo_cv.png"/>
+    <img class="logo" src="https://drive.google.com/uc?export=view&id=1YxLQB2evsNNv_vJcxjZeeJ_SmbAtZ3A4""/>
     <a class="nama">Arifin Muhammad</a>
     <div class="line-name-role"></div>
     <a class="role">Production Team Lead</a>
