--- a/dadi-rahmat.html
+++ b/dadi-rahmat.html
@@ -13,11 +13,6 @@
 
  <body oncopy="return false" onpaste="return false" oncut="return false">
   <div class="frame1">
-   <a id="title" class="title-menu">Bio</a>
-   <a onclick="prev()" class="nav-text-prev">Prev</a>
-   <a class="nav-text-separator">|</a>
-   <a onclick="next()" class="nav-text-next">Next</a>
-
    <div class="box-red-1"></div>
    <div class="box-red-2"></div>
 
@@ -35,25 +30,30 @@
 
    <div class="frame3">
 
-    <a id="label-left-1" class="label" style="left: 0px; top: 41px;">Born Place</a>
-    <a id="value-left-1" class="text-value" style="left: 0px; top: 67px;">Tangerang</a>
+    <a id="label-left-1" class="label left row-1">Born Place</a>
+    <a id="value-left-1" class="text-value left row-2">Tangerang</a>
 
-    <a id="label-right-1" class="label" style="left: 175px; top: 41px;">Born Date</a>
-    <a id="value-right-1" class="text-value" style="left: 175px; top: 67px;">Call</a>
+    <a id="label-right-1" class="label right row-1">Born Date</a>
+    <a id="value-right-1" class="text-value right row-2">Call</a>
 
-    <a id="label-left-2" class="label" style="left: 0px; top: 265px;">Domicile</a>
-    <a id="value-left-2" class="text-value" style="left: 0px; top: 291px;">Tangerang</a>
+    <a id="label-left-2" class="label left row-3">Domicile</a>
+    <a id="value-left-2" class="text-value left row-4">Tangerang</a>
 
-    <a id="label-right-2" class="label" style="left: 175px; top: 265px;">Motto</a>
-    <a id="value-right-2" class="text-value" style="left: 175px; top: 291px;">Expect for nothing,<br/>care for more,<br/>insyaAllah.</a>
+    <a id="label-right-2" class="label right row-3">Motto</a>
+    <a id="value-right-2" class="text-value right row-4">Expect for nothing,<br/>care for more,<br/>insyaAllah.</a>
 
-    <a id="label-left-3" class="label" style="left: 0px; top: 491px;">For more inquiry</a>
-    <a id="value-left-3" class="text-value" style="left: 0px; top: 517px;">dadidev20@gmail.com</a>
+    <a id="label-left-3" class="label left row-5">For more inquiry</a>
+    <a id="value-left-3" class="text-value left row-6">dadidev20@gmail.com</a>
 
-    <a id="label-right-3" class="label" style="left: 175px; top: 491px;">Phone</a>
-    <a id="value-right-3" class="text-value" style="left: 175px; top: 517px;">Call</a>
+    <a id="label-right-3" class="label right row-5">Phone</a>
+    <a id="value-right-3" class="text-value right row-6">Call</a>
 
     </div>
+
+    <a id="title" class="title-menu">Bio</a>
+    <a onclick="prev()" class="nav-text-prev">Prev</a>
+    <a class="nav-text-separator">|</a>
+    <a onclick="next()" class="nav-text-next">Next</a>
 
     <div class="profile-image"></div>
 
