--- a/dadi-rahmat.html
+++ b/dadi-rahmat.html
@@ -47,7 +47,7 @@
     <a id="value-left-3" class="text-value left row-6">dadidev20@gmail.com</a>
 
     <a id="label-right-3" class="label right row-5">Phone</a>
-    <a id="value-right-3" class="text-value right row-6">Call</a>
+    <a id="value-right-3" class="text-value right row-6">08121870372</a>
 
     </div>
 
@@ -77,7 +77,7 @@ function prev() {
  document.getElementById("label-left-3").innerHTML = "For more inquiry";
  document.getElementById("value-left-3").innerHTML = "dadidev20@gmail.com";
  document.getElementById("label-right-3").innerHTML = "Phone";
- document.getElementById("value-right-3").innerHTML = "Call";
+ document.getElementById("value-right-3").innerHTML = "08121870372";
 }
 
 function next() {
