--- a/dadi-rahmat.html
+++ b/dadi-rahmat.html
@@ -23,9 +23,9 @@
     <div class="line-name-role"></div>
     <a class="role">Software Developer</a>
     <a class="short-bio">I am 23 years old, graduated from Electrical Engineering UNTIRTA.
-        I am currently work in Nusantara Duta Solusindo Corporation as Software Developer.
-        I am blessed for this opportunity and always trying my best for achieve every goals
-        that i have expecting for, one by one-gently.
+        Currently work in Nusantara Duta Solusindo Corporation as Software Developer.
+        I am feeling blessed for this opportunity and always trying my best for achieve every goals
+        that i have expecting for, one by one-gently. Yakin Usaha Sampai.
     </a>
    </div>
 
